2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_agents/open.py (OpenAgent._select_files):
	If possible, set the filechooser directory to that of the current
	project's main file.

2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/conf/wrappers.py (Container):
	Set options as instance variables.

2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/search-dialog.glade:
	* gaupol/gtk/dialogs/search.py:
	Fix initial focus.

2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/search.py:
	Set cursor busy for "Replace All".

2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/search.py:
	Fix text view scrolling.

2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/search-dialog.glade:
	* gaupol/_agents/search.py:
	* gaupol/_agents/set.py:
	* gaupol/gtk/_actions/text.py:
	* gaupol/gtk/_agents/edit.py:
	* gaupol/gtk/_agents/search.py:
	* gaupol/gtk/app.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/search.py:
	* gaupol/gtk/lengthlib.py:
	* gaupol/gtk/page.py:
	Add search. Closes #6690.

2007-03-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui.xml:
	* gaupol/_agents/preview.py:
	* gaupol/gtk/_actions/tools.py:
	* gaupol/gtk/_agents/save.py:
	* gaupol/gtk/_agents/tools.py:
	Add preview.

2007-03-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.desktop.in:
	Remove Application from Categories and Add Video.

2007-03-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/add-changelog:
	* tools/nose-run:
	* tools/pydoctor:
	Add proper quoting.

2007-03-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/ui.xml:
	* gaupol/enclib.py:
	* gaupol/gtk/_actions/edit.py:
	* gaupol/gtk/_actions/text.py:
	* gaupol/gtk/_agents/open.py:
	* gaupol/gtk/_agents/save.py:
	* gaupol/gtk/app.py:
	* gaupol/gtk/dialogs/about.py:
	* gaupol/gtk/dialogs/file.py:
	* gaupol/gtk/dialogs/split.py:
	* gaupol/langlib.py:
	* setup.py:
	Added "Insert Subtitles...", "Remove Subtitles" and "Find And Replace"