@@ -1,5 +1,10 @@
 2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* gaupol/gtk/_agents/close.py:
+	Confirm close if file no longer exists.
+
+2007-03-08  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* gaupol/gtk/_agents/open.py (OpenAgent._select_files):
 	If possible, set the filechooser directory to that of the current
 	project's main file.
